--- a/package.json
+++ b/package.json
@@ -6,11 +6,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss-animation-delay": "^2.0.1"
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "22.5.2",
+    "@types/react": "18.3.5",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.1",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.44",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.3.0"
   }
 }
