--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "framer-motion": "^11.5.3",
-    "next": "latest",
+    "next": "^14.2.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.13.1",
@@ -21,7 +22,7 @@
     "@eslint/js": "^9.9.1",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "22.5.2",
-    "@types/react": "18.3.5",
+    "@types/react": "18.2.42",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.1",
     "globals": "^15.9.0",
