--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "^14.2.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "tailwindcss-animation-delay": "^2.0.1"
   },
