--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-tailwindcss": "^3.17.4",
     "framer-motion": "^11.5.3",
     "next": "^14.2.14",
+    "next-cloudinary": "^6.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
